fix: disabled button contrast

--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -8,7 +8,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 .btn {
-  @apply rounded-lg font-serif;
+  @apply rounded-lg font-serif disabled:bg-base-300 disabled:text-neutral;
 }
 
 .alert-info {
